@@ -1,2 +1,3 @@
-#+roam_alias: "a1" "a 2"
+#+alias: a1
+#+alias: a 2
 #+title: t1
