@@ -1,2 +1,4 @@
-#+roam_alias: "roam" "alias"
-#+roam_alias: "second" "line"
+#+alias: roam
+#+alias: alias
+#+alias: second
+#+alias: line
